# boilerplates

./: .gitignore  README.md
ansible/localhost/: localhost.yml
bash/: script-simple.sh  script-template.sh
c/: .gitignore
c/udp-sync-echo/: CMakeLists.txt  Makefile  README.md
c/udp-sync-echo/src/: client.c  main.c  pointers.c  server.c
cpp/: .gitignore
cpp/hello-world/: CMakeLists.txt  Makefile  README.md
cpp/hello-world/src/main/: helloworld.cpp  pointers.cpp  vectors.cpp
docker-compose/env-vars/: .env  docker-compose.yml  set-env.sh
docker/minio-compose/: docker-compose.yml
docker/tesseract/: Dockerfile
docker/user-mapping/: Dockerfile  Readme.md  docker-compose.yaml
go/hello/: Makefile  README.md  go.mod  hello.go
go/hello-world/: README.md  hello-world
go/tour/: tasks.json
java/: .gitignore
java/aeron-latency/: README.md  pom.xml
java/chronicle-queue-latency/: README.md  pom.xml
java/experiments/: build.gradle  settings.gradle
java/gradle-hello-world/: .gitignore  README.md  build.gradle  settings.gradle
java/hello-world/: README.md  build.gradle  pom.xml
java/jooby-hello-world/: README.md  build.gradle
java/k8s-fabric8-client/: README.md  build.gradle  settings.gradle
java/light4j-example/: .gitignore  README.md  manage.sh
jupyter/: README.md
jupyterlab/: README.md
jupyterlab-javascript/: .gitignore  Pipfile  makefile  package-lock.json
jupyterlab-python/: makefile
python/: README.md
pytorch/: .gitignore  .pylintrc  Pipfile  README.md  makefile
rust/learn_from_doc/: Cargo.toml
scala/: .gitignore
(+230 files in other folders)
